test/distributions/blockCyc/positiveBlockSize.good
positiveBlockSize.chpl:3: error: halt reached - blocksize must be positive - got blocksize (0, 0) instead
